benchmark: minor fixes on benchmark. now, test1-3 is fully operational

--- a/benchmark_yuhui.html
+++ b/benchmark_yuhui.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="bench/dist/css/angular-chart.css">
+    <link rel="stylesheet" href="bench/dist/css/styles.css">
     <title>Yuhui's Furious Benchmark</title>
    <!--  <link rel="stylesheet" href=""> -->
 </head>
