--- a/examples/kernel-regression.html
+++ b/examples/kernel-regression.html
@@ -232,9 +232,12 @@
 							.style("text-anchor", "middle")
 							.text("Annual GDP growth, Percent");
 
+					console.log(data[1]);
+					console.log('--------------------------');
+
 					line = d3.svg.line()
 						.x(function(d, i) { return scaleX(d[0]); })
-						.y(function(d) { return scaleY(d[1]); })
+						.y(function(d) { console.log(d[1]); return scaleY(d[1]); })
 						.interpolate("linear");
 
 					g = main.append("svg:g");
